--- a/src/SMPConfigurator/view/SMPConfiguratorCreateModule.fxml
+++ b/src/SMPConfigurator/view/SMPConfiguratorCreateModule.fxml
@@ -4,6 +4,6 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SMPConfigurator.SMPConfiguratorCreateModule">
-<children><Button fx:id="add" layoutX="246.0" layoutY="268.0" mnemonicParsing="false" onAction="#action" prefHeight="25.0" prefWidth="68.0" text="%CreateModule.button.add" /><Button fx:id="cancel" layoutX="342.0" layoutY="268.0" mnemonicParsing="false" onAction="#action" prefHeight="25.0" prefWidth="68.0" text="%CreateModule.button.cancel" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="479.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SMPConfigurator.SMPConfiguratorCreateModule">
+<children><Button fx:id="add" layoutX="246.0" layoutY="268.0" mnemonicParsing="false" onAction="#action" prefHeight="25.0" prefWidth="68.0" text="%CreateModule.button.add" /><Button fx:id="cancel" layoutX="342.0" layoutY="268.0" mnemonicParsing="false" onAction="#action" prefHeight="25.0" prefWidth="68.0" text="%CreateModule.button.cancel" /><TextField fx:id="modulename" layoutX="121.0" layoutY="200.0" promptText="%CreateModule.name" /><Label layoutX="58.0" layoutY="205.0" text="%CreateModule.label.name" />
 </children></AnchorPane>
